--- a/PasswordGenerator/PasswordGenerator.WebApp/index.html
+++ b/PasswordGenerator/PasswordGenerator.WebApp/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">    
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="icon" type="image/x-icon" href="IconPng.ico">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <title>PasswordGenerator</title>
 </head>
@@ -34,7 +35,7 @@
                 <br>
                 <div class="form-group">
                     <label for="passwordSize">Password Size</label>
-                    <input type="number" class="form-control" id="passwordSize" placeholder="Ex: 0" onkeyup="ControlButton()">
+                    <input type="number" class="form-control" id="passwordSize" placeholder="Ex: 10" onkeyup="ControlButton()">
                 </div>
                 <div class="form-group">
                     <label for="passwordQuantity">Quantity of passwords to be generated</label>
